--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -102,5 +102,5 @@
   </table>
   
   
-  <button mat-raised-button color="primary"  (click)="submitted=false;validationForm.reset()" style="margin: 10px;">Enter new fileds</button>
+  <button mat-raised-button color="primary"  (click)="submitted=false;validationForm.reset()" style="margin: 10px;">Enter new fields</button>
 </div>
